welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:22: error: ':' expected but ')' found.
def in16(day):Boolean = {
            ^alarmClock:40: error: identifier expected but '}' found.
 }
 ^